[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "desktop-app-common"
version = "0.1.1"
description = "Shared platform abstraction for pywebview desktop apps"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "semnil" }]

[tool.setuptools.packages.find]
where = ["src"]
