[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "desktop-app-common"
dynamic = ["version"]
description = "Shared platform abstraction for pywebview desktop apps"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "semnil" }]

[tool.setuptools.dynamic]
version = {attr = "desktop_app_common.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
